gitops/platform/showroom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showroom
  namespace: parasol-showroom
  labels:
    app: showroom
spec:
  selector:
    app: showroom
  ports:
    - name: web
      port: 8080
      targetPort: 8080
