gitops/platform/showroom/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: showroom
  namespace: parasol-showroom
  labels:
    app: showroom
spec:
  to:
    kind: Service
    name: showroom
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
